--- a/prbt_moveit_config/package.xml
+++ b/prbt_moveit_config/package.xml
@@ -20,7 +20,7 @@
   <url type="bugtracker">https://github.com/ros-planning/moveit-resources/issues</url>
   <url type="repository">https://github.com/ros-planning/moveit-resources</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <!-- disabled to remove circular dependencies
   <exec_depend>moveit_ros_move_group</exec_depend>
@@ -36,4 +36,8 @@
   <exec_depend>rviz</exec_depend>
   <exec_depend>moveit_resources_prbt_support</exec_depend>
   <exec_depend>moveit_resources_prbt_ikfast_manipulator_plugin</exec_depend>
+
+  <export>
+      <build_type>ament_cmake</build_type>
+  </export>
 </package>
