--- a/benchmarking/config/moveit_cpp.yaml
+++ b/benchmarking/config/moveit_cpp.yaml
@@ -1,3 +1,3 @@
 planning_pipelines:
   # MoveIt cpp
-  pipeline_names: ["ompl", "ompl_rrtc", "chomp", "pilz_industrial_motion_planner"]
+  pipeline_names: ["ompl", "ompl_2", "ompl_3", "ompl_4", ompl_5, ompl_6]
