--- a/benchmarking/config/run_benchmark.yaml
+++ b/benchmarking/config/run_benchmark.yaml
@@ -2,27 +2,23 @@
 
 parameters:
     name: FullBenchmark
-    runs: 50
+    runs: 25
     group: panda_arm      # Required
-    timeout: 1.5
+    timeout: 1.0
     output_directory: /tmp/moveit_benchmarks/
     start_states_regex: ready
 planning_pipelines:
   # Benchmark tool
-  pipelines: [OMPL_RRTC, CHOMP, PILZ_LIN]
+  pipelines: [OMPL_RRTC, ANYTIME]
   OMPL_RRTC:
-    name: ompl_rrtc
+    name: ompl
     planners:
       - RRTConnectkConfigDefault
-  CHOMP:
-     name: chomp
+  ANYTIME:
+     name: ompl_2
      planners:
-       - CHOMP
-  PILZ_LIN:
-     name: pilz_industrial_motion_planner
-     planners:
-       - LIN
-  parallel_pipelines: [ompl_pilz_chomp]
-  ompl_pilz_chomp:
-    pipelines: [ompl_rrtc, chomp, pilz_industrial_motion_planner]
-    planner_ids: [RRTConnectkConfigDefault, CHOMP, LIN]
+       - AnytimePathShortening
+  parallel_pipelines: [parallel_rrtc]
+  parallel_rrtc:
+    pipelines: [ompl_3, ompl_4, ompl_5, ompl_6]
+    planner_ids: [RRTConnectkConfigDefault, RRTConnectkConfigDefault, RRTConnectkConfigDefault, RRTConnectkConfigDefault]
