--- a/benchmarking/config/run_benchmark.yaml
+++ b/benchmarking/config/run_benchmark.yaml
@@ -9,16 +9,20 @@ parameters:
     start_states_regex: ready
 planning_pipelines:
   # Benchmark tool
-  pipelines: [OMPL_RRTC, ANYTIME]
+  pipelines: [OMPL_RRTC, ANYTIME1, ANYTIME2]
   OMPL_RRTC:
     name: ompl
     planners:
       - RRTConnectkConfigDefault
-  ANYTIME:
+  ANYTIME1:
      name: ompl_2
      planners:
-       - AnytimePathShortening
-  parallel_pipelines: [parallel_rrtc]
-  parallel_rrtc:
-    pipelines: [ompl_3, ompl_4, ompl_5, ompl_6]
-    planner_ids: [RRTConnectkConfigDefault, RRTConnectkConfigDefault, RRTConnectkConfigDefault, RRTConnectkConfigDefault]
+       - AnytimePathShortening1
+  ANYTIME2:
+     name: ompl_3
+     planners:
+       - AnytimePathShortening2
+  parallel_pipelines: [ANYTIME3]
+  ANYTIME3:
+    pipelines: [ompl_4]
+    planner_ids: [AnytimePathShortening3]
