--- a/benchmarking/config/run_benchmark.yaml
+++ b/benchmarking/config/run_benchmark.yaml
@@ -2,14 +2,18 @@
 
 parameters:
     name: FullBenchmark
-    runs: 50
+    runs: 25
     group: panda_arm      # Required
     timeout: 1.5
     output_directory: /tmp/moveit_benchmarks/
     start_states_regex: ready
 planning_pipelines:
   # Benchmark tool
-  pipelines: [OMPL_RRTC, CHOMP, PILZ_LIN]
+  pipelines: [OMPL_ANY, OMPL_RRTC, CHOMP, PILZ_LIN]
+  OMPL_ANY:
+     name: ompl
+     planners:
+       - APSConfigDefault
   OMPL_RRTC:
     name: ompl_rrtc
     planners:
